Edited wiki page through web user interface.

--- a/wiki/Download_Install_Configuration.wiki
+++ b/wiki/Download_Install_Configuration.wiki
@@ -14,52 +14,24 @@
 
   # Configure your _build.xml_
 
-Define a classpath (`AntTaskMqSeries.jar` and MQ libraries dependencies):
+Define a classpath (`AntTaskSkype.jar` and Skype libraries dependencies):
 {{{
-	<path id="AntTaskMqSeries.classpath">
-		<fileset dir="./lib">
+	<path id="AntTaskSkype.classpath">
+		<fileset dir="${project_lib}">
 			<include name="**/*.jar" />
 		</fileset>
 	</path>
 }}}
 
-Define the task `AntTaskMqSeries:`
+Define the task `AntTaskSkype:`
 {{{
-	<taskdef name="AntTaskMqSeries" classname="uk.co.marcoratto.ant.MqSeries" classpathref="AntTaskMqSeries.classpath" />
+	<taskdef name="skypeSendMessage" classname="uk.co.marcoratto.ant.skype.SendMessage" classpathref="AntTaskSkype.classpath" />	
+
 }}}
 
 Use the task:
 {{{
-	<target name="clear1">
-	 	<AntTaskMqSeries host="${mq_server}" port="${mq_port}" channel="${mq_channel}" queue="${mq_queue_input}" action="clear"/>
-	</target>		
-
-	<target name="write1">
-	 	<AntTaskMqSeries host="${mq_server}" port="${mq_port}" channel="${mq_channel}" queue="${mq_queue_input}" inputFile="./dummyUTF-8.txt" action="write"/>
-	</target>
-	
-	<target name="write2">
-	 	<AntTaskMqSeries host="${mq_server}" port="${mq_port}" channel="${mq_channel}" queue="${mq_queue_input}" action="write">
-			<fileset dir=".">
-				<include name="**/dummy*.txt" />
-				<exclude name="**/dummy.txt" />				
-			</fileset>
-		</AntTaskMqSeries>			
-	</target>
-	
-	<target name="write3">
-	 	<AntTaskMqSeries host="${mq_server}" port="${mq_port}" channel="${mq_channel}" queue="${mq_queue_input}" listFile="./lists.txt" action="write" skipZeroLength="true" />
-	</target>
-	
-	<target name="writeUTF-8">
-	 	<AntTaskMqSeries host="${mq_server}" port="${mq_port}" channel="${mq_channel}" queue="${mq_queue_input}" text="Hello World!" action="write"/>
-	</target>
-	
-	<target name="browse1">
-	 	<AntTaskMqSeries host="${mq_server}" port="${mq_port}" channel="${mq_channel}" queue="${mq_queue_browse}" outputFileName="./browse1_" outputFileExt=".txt" match="World" action="browse" override="true"/>
+	<target name="testSendMessage">
+		<skypeSendMessage debug="true" listofnicknames="Alice|Bob" separator="|" message="Hello World!" failonerror="false" />
 	</target>	
-	
-	<target name="read1">
-	 	<AntTaskMqSeries host="${mq_server}" port="${mq_port}" channel="${mq_channel}" queue="${mq_queue_output}" outputFileName="./read1_" outputFileExt=".txt" action="read" override="true"/>
-	</target>
 }}}
