--- a/wiki/Verify_Release.wiki
+++ b/wiki/Verify_Release.wiki
@@ -3,7 +3,7 @@
 =Verify release=
 
 It is essential that you verify the integrity of the downloaded files using the PGP signature or the SHA1 or MD5 checksums. The checksums are not as strong indicators as the PGP signature.
-The PGP signatures can be verified using PGP or GPG. First download the [http://anttaskmqseries.googlecode.com/svn/trunk/AntTaskMqSeries/KEYS KEYS] as well as the asc signature file for the particular distribution. Verify the signatures using:
+The PGP signatures can be verified using PGP or GPG. First download the [http://anttaskskype.googlecode.com/svn/trunk/AntTaskSkype/KEYS KEYS] as well as the asc signature file for the particular distribution. Verify the signatures using:
 
 _
 {{{
